@@ -61,13 +61,15 @@ class Constants extends AbstractObjectAnalysis
     {
         $output = $this->dispatchStartEvent();
 
-        // This is actually an array, we ara analysing. But We do not want to render
-        // an array, so we need to process it like the return from an iterator.
         /** @var \ReflectionClass $ref */
         $ref = $this->parameters[static::PARAM_REF];
-        $refConst = $ref->getConstants();
 
-        if (empty($refConst) === true) {
+        // Retrieve the constants that are accessible in the scope of the class.
+        // The problem is, that the private const may or may not be available
+        // inside the higher class structure, because these parts do not inherit
+        // them.
+        $listOfConstants = $ref->getConstants();
+        if (empty($listOfConstants) === true) {
             // Nothing to see here, return an empty string.
             return '';
         }
@@ -81,8 +83,11 @@ class Constants extends AbstractObjectAnalysis
                     ->setName('Constants')
                     ->setType(static::TYPE_INTERNALS)
                     ->setIsMetaConstants(true)
-                    ->addParameter(static::PARAM_DATA, $refConst)
+                    ->addParameter(static::PARAM_DATA, $listOfConstants)
+                    // Deprecated since 4.0.0
                     ->addParameter(static::PARAM_CLASSNAME, $classname)
+                    // Deprecated since 4.0.0
+                    ->addParameter(static::PARAM_REF, $ref)
                     ->injectCallback(
                         $this->pool->createClass(ThroughConstants::class)
                     )
