@@ -5,6 +5,8 @@
 - Added timestamp analysis for large integers.
 - Added throw away messages.
 - Added return type to the method and function analysis.
+- Added additional data to the constants analysis for PHP 7.1
+  and higher. The scope analysis now respects their visibility.
 - Change: Removed all deprecations.
 - Change: Removed the PHP 5.x fatal error handler.
 - Change: Dropped PHP 5.x support.
